# mirage

./: CMakeLists.txt  INSTALL.md  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: build-test.yml  ci-tests-qwen3.yml  code-format.yml  gpu-tests.yml  release-wheels.yml  shell-check.yml  wheel-pr.yml
.github/workflows/helpers/: build_mirage_from_source.sh  free_space_on_runner.sh  install_dependencies.sh  set_env.sh
cmake/: cuda.cmake
cpp_examples/: generate_kernel.cc
demo/: demo_rms_norm.py
demo/qwen3/: demo.py
docker/: Dockerfile  install_mirage.sh
examples/: linear_fwd_bwd_test.py  mpk_python_minimal.py  rmsnorm_backward_test_broken.py  rmsnorm_bw_test2.py
include/mirage/: config.h
include/mirage/c/: graph.h  ir.h  source.h  types.h
include/mirage/kernel/: device_memory_manager.h  graph.h  task_register.h
include/mirage/persistent_kernel/: persistent_kernel.cuh  runtime_header.h
include/mirage/search/: config.h  search_c.h
python/mirage/: kernel.py  persistent_kernel.py
scripts/release/: README.md  build-wheel.sh  build-wheels.sh  run-install-smoke.sh
src/c/: graph.cc  internal.h  ir.cc  source.cc
src/kernel/: device_memory_manager.cc  device_memory_manager.cu  graph.cc  runtime.cc  task_register.cc
src/search/: search.cc  search_c.cc
src/threadblock/: concat.cc  element_binary.cc  forloop_accum.cc  graph.cc  input_loader.cc  matmul.cc  reduction.cc  rms_norm.cc
src/transpiler/: plan_stensor_memory.cc
tests/python/: test_packaging.py
zgmpk/: build.zig  build.zig.zon
zgmpk/src/: main.zig  mirage_mm.py  mirage_rt.zig
(+10 files in other folders)
